# biblebot

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  book.epub  book_chunks_pdf.json  bot.py  chunk_book.py  clean_txt.py  prepare_index.py  pyproject.toml  test.py
